longhorn/longhorn-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  ipFamilyPolicy: PreferDualStack
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: longhorn-ui
