longhorn/longhorn-ingress-crd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-crd
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`longhorn.cube.local`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
